<resources>
    <string name="app_name">Хочу помочь</string>
    <string name="loading_with_points">Загрузка…</string>
    <string name="logo">logo</string>
    <string name="logo_mss">logoMss</string>
    <string name="title_help_categ">Помочь</string>
    <string name="news_bottom_nav">Новости</string>
    <string name="search_bottom_nav">Поиск</string>
    <string name="help_bottom_nav">Помочь</string>
    <string name="history_bottom_nav">История</string>
    <string name="profil_bottom_nav">Профиль</string>
    <string name="choose_category_help">Выберите категорию помощи</string>
    <string name="child_category">Дети</string>
    <string name="adults_category">Взрослые</string>
    <string name="seniors_category">Пожилые</string>
    <string name="animals_category">Животные</string>
    <string name="events_category">Мероприятия</string>
    <string name="error_network">Не удалось загрузить данные</string>
    <string name="error_button_retry">Повторить</string>
    <string name="date_birth">Дата рождения</string>
    <string name="field_activity">Сфера деятельности</string>
    <string name="receive_push_notif">Получать push-уведомления</string>
    <string name="take_photo">Сделать снимок</string>
    <string name="delete">Удалить</string>
    <string name="select_photo">Выбрать фото</string>
    <string name="edit">Изменить</string>
    <string name="your_friends">Ваши друзья</string>
    <string name="exit_account">Выйти из аккаунта</string>
    <string name="grey_line">Серая полоса</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selected">Выбрано:</string>
    <string name="friend_three">Виктор Кузнецов</string>
    <string name="friend_two">Евгений Александров</string>
    <string name="friend_one">Дмитрий Валерьевич</string>
    <string name="key_words_search_example">Ключевые слова: мастер-класс, помощь Результаты поиска: 109 мероприятий</string>
    <string name="choose_category">Выбрана категория:</string>
    <string name="enter_organization_name">Введите название организации</string>
    <string name="filter">Фильтер</string>
    <string name="share">Поделиться</string>
    <string name="have_questions">У вас есть вопросы?</string>
    <string name="write_us">Напишите нам</string>
    <string name="go_to_site_organization">Перейти на сайт организации</string>
    <string name="extra_friends_event_detail">+102</string>
    <string name="left">Осталось</string>
    <string name="will_begin">Начнется</string>
    <string name="completed">Завершено</string>
    <string name="help_things">Помочь вещами</string>
    <string name="become_volunteer">Стать волонтером</string>
    <string name="professional_help">Проф. помощь</string>
    <string name="help_money">Помочь деньгами</string>
    <string name="on_events">По мероприятиям</string>
    <string name="on_nko">По НКО</string>
    <string name="write_us_link"><![CDATA[<a href=\"mailto: %s\">%s</a>]]></string>
    <string name="go_to_site_organization_link"><![CDATA[<a href=\"%s\">%s</a>]]></string>
    <string name="text_authorization">Для участия в мероприятиях войдите в приложение через социальые сети</string>
    <string name="Authorization_social_networks">Или авторизуйтесь через приложение</string>
    <string name="enter_email">Введите e-mail</string>
    <string name="enter">Войти</string>
    <string name="forgot_password"><u>Забыли пароль?</u></string>
    <string name="registration"><u>Регистрация</u></string>
    <string name="authorization">Авторизация</string>
    <string name="enter_password">Введите пароль</string>
    <string name="error_sign_up">Неверный email или пароль</string>
    <string name="error">Ошибка</string>
    <string name="ok">ОК</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <plurals name="days_left">
        <item quantity="one">Осталось %d день (%s - %s)</item>
        <item quantity="few">Осталось %d  дня  (%s - %s)</item>
        <item quantity="many">Осталось %d дней (%s - %s)</item>
        <item quantity="other">Осталось %d дней (%s - %s)</item>
    </plurals>
    <plurals name="day">
        <item quantity="one">день</item>
        <item quantity="few">дня</item>
        <item quantity="many">дней</item>
        <item quantity="other">дней</item>
    </plurals>

</resources>
