<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/i_news"
        android:icon="@drawable/ic_news"
        android:title="@string/news_bottom_nav" />
    <item
        android:id="@+id/i_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_bottom_nav" />
    <item
        android:id="@+id/i_help"
        android:checked="true"
        android:title="@string/help_bottom_nav" />
    <item
        android:id="@+id/i_history"
        android:icon="@drawable/ic_history"
        android:title="@string/history_bottom_nav" />
    <item
        android:id="@+id/i_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profil_bottom_nav" />

</menu>