<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutBottomMenu"
    style="@style/LinearLayoutBottomMenu">

    <Button
        android:id="@+id/newsBottomNav"
        style="@style/BottomNavMenu"
        android:drawableTop="@drawable/ic_news"
        android:text="@string/news_bottom_nav" />

    <Button
        android:id="@+id/seatchBottomNav"
        style="@style/BottomNavMenu"
        android:drawableTop="@drawable/ic_searh"
        android:text="@string/search_bottom_nav" />

    <Button
        android:id="@+id/helpBottomNav"
        style="@style/BottomNavMenu"
        android:drawablePadding="16dp"
        android:drawableTop="@drawable/ic_heart"
        android:foregroundGravity="top"
        android:text="@string/help_bottom_nav" />

    <Button
        android:id="@+id/historyBottomNav"
        style="@style/BottomNavMenu"
        android:drawableTop="@drawable/ic_history"
        android:text="@string/history_bottom_nav" />

    <Button
        android:id="@+id/profilBottomNav"
        style="@style/BottomNavMenu"
        android:drawableTop="@drawable/ic_profil"
        android:text="@string/profil_bottom_nav" />

</LinearLayout>