<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_columnWeight="4"
    android:background="@color/off_white"
    android:orientation="horizontal"
    tools:targetApi="lollipop">

    <Button
        style="@style/ButtonBottomMenuEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_shirt"
        android:text="@string/help_things"
        tools:text="Помочь вещами" />

    <Button
        style="@style/ButtonBottomMenuEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_hands"
        android:text="@string/become_volunteer"
        tools:text="Стать волонтером" />

    <Button
        style="@style/ButtonBottomMenuEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_tools"
        android:text="@string/professional_help"
        tools:text="Проф. помощь" />

    <Button
        style="@style/ButtonBottomMenuEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_coins"
        android:text="@string/help_money"
        tools:text="Помочь деньгами" />

</LinearLayout>