<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ui.authorization.AuthorizationActivity">

    <include
        android:id="@+id/toolbarAuthorization"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarAuthorization">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/default_padding_authorization"
            android:paddingEnd="@dimen/default_padding_authorization">

            <TextView
                android:id="@+id/textViewTextAuthorization"
                style="@style/TextAuthorization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/authorization_text_margin_top"
                android:text="@string/text_authorization"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbarAuthorization"
                tools:text="Для участия в мероприятиях войдите в приложение через социальые сети" />

            <LinearLayout
                android:id="@+id/lnrAuthorizationSocialNetworks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/authorization_lnr_social"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewTextAuthorization">

                <ImageButton
                    android:id="@+id/imageButtonVk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/ic_vk" />

                <ImageButton
                    android:id="@+id/imageButtonFb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authorization_image_social_margin_start"
                    android:background="@null"
                    android:src="@drawable/ic_fb" />

                <ImageButton
                    android:id="@+id/imageButtonOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authorization_image_social_margin_start"
                    android:background="@null"
                    android:src="@drawable/ic_ok" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewAuthorizationSocialNetworks"
                style="@style/AuthorizationSocialTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/authorization_text_social_marrgin_top"
                android:text="@string/Authorization_social_networks"
                tools:text="Или авторизуйтесь через приложение" />

            <TextView
                android:id="@+id/textViewEmail"
                style="@style/AuthorizationTextViewEmailAndPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authorization_text_view_email_pass_margin_start"
                android:layout_marginTop="@dimen/authorization_text_view_email_margin_top"
                android:text="@string/e_mail"
                tools:text="E-mail " />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textViewPassword"
                style="@style/AuthorizationTextViewEmailAndPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/authorization_text_view_email_pass_margin_start"
                android:layout_marginTop="@dimen/authorization_text_view_pass_margin_top"
                android:text="@string/password"
                tools:text="Пароль " />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/imageButtonChangeVisiblePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:src="@drawable/ic_close"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/buttonLogin"
                style="@style/AuthorizationButtonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/authorization_button_login_margin_top"
                android:text="@string/enter" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/authorization_lnr_extra_help_margin_top"
                android:layout_marginBottom="@dimen/authorization_lnr_extra_help_margin_bottom"
                android:orientation="horizontal">

                <TextView
                    style="@style/AuthorizationLnrExtraHelpTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/forgot_password"
                    tools:text="Забыли пароль?" />

                <TextView
                    style="@style/AuthorizationLnrExtraHelpTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/registration"
                    android:textStyle="normal"
                    tools:text="Регистрация" />

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBarAuthorization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>