<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".presentation.ui.help.HelpFragment">

            <TextView
                android:id="@+id/textViewChooseCategoryHelp"
                style="@style/TextViewChooseCategoryHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/tv_choose_category_help_margin_top"
                android:text="@string/choose_category_help"
                tools:text="Выберите категорию помощи" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewChooseCategoryHelp"
                style="@style/RecyclerViewChooseCategoryHelp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/rv_choose_category_help_margin_end"
                android:layout_marginTop="@dimen/rv_choose_category_help_margin_top" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/error_default_padding_offset">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_network" />

            <Button
                android:id="@+id/buttonRetry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_retry_margin_top"
                android:text="@string/error_button_retry" />

        </LinearLayout>

    </ViewFlipper>


</LinearLayout>