<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewFlipper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey_two"
        android:orientation="vertical"
        tools:context=".presentation.ui.searchresultevents.SearchResultEventsFragment">

        <TextView
            android:id="@+id/textViewKeyWords"
            style="@style/TextViewKeyWords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/key_words_margin_end"
            android:layout_marginStart="@dimen/search_default_margin_top_start"
            android:layout_marginTop="@dimen/search_default_margin_top_start"
            android:text="@string/key_words_search_example"
            tools:text="Ключевые слова: мастер-класс, помощь Результаты поиска: 109 мероприятий" />

        <ImageView
            android:id="@+id/imageViewGreyLine"
            android:layout_width="match_parent"
            android:layout_height="@dimen/grey_line_height"
            android:layout_marginTop="@dimen/search_default_margin_top_start"
            android:src="@drawable/rectangle_grey" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSearchResultNko"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_grey_two"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/recycler_search_result_pading_bot" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/error_default_padding_offset">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_network" />

        <Button
            android:id="@+id/buttonRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_retry_margin_top"
            android:text="@string/error_button_retry" />

    </LinearLayout>

</ViewFlipper>