<?xml version="1.0" encoding="utf-8"?>

<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewFlipper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/constraint_user_padding_top">

                <TextView
                    android:id="@+id/textViewFullName"
                    style="@style/TextViewFullNameProfileEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/profile_edit_default_margin_start"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Константинов Денис" />

                <TextView
                    android:id="@+id/textViewSettingBirthData"
                    style="@style/TextViewSettingProfileEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/profile_edit_default_margin_start"
                    android:layout_marginTop="@dimen/text_view_date_birth_margin_top"
                    android:text="@string/date_birth"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewFullName"
                    tools:text="@string/date_birth" />

                <TextView
                    android:id="@+id/textViewBirthData"
                    style="@style/TextViewProfileEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/profile_edit_default_margin_start"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewSettingBirthData" />

                <TextView
                    android:id="@+id/textViewSettingFieldActivity"
                    style="@style/TextViewSettingProfileEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/profile_edit_default_margin_start"
                    android:layout_marginTop="@dimen/text_view_setting_field_activity"
                    android:text="@string/field_activity"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewBirthData"
                    tools:text="@string/field_activity" />

                <TextView
                    android:id="@+id/textViewFieldActivity"
                    style="@style/TextViewProfileEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/profile_edit_default_margin_start"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewSettingFieldActivity" />


                <TextView
                    android:id="@+id/textViewPushNotifications"
                    style="@style/TextViewPushNotifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_view_profile_edit_margin_start"
                    android:layout_marginTop="@dimen/text_view_push_notifications_margin_top"
                    android:text="@string/receive_push_notif"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewFieldActivity"
                    tools:text="Получать push-уведомления" />

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/switch_profile_edit_marrgin_end"
                    android:layout_marginTop="@dimen/switch_profile_edit_marrgin_top"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewFieldActivity" />


                <ImageView
                    android:id="@+id/imageViewRectangleTop"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/grey_line_height"
                    android:layout_marginTop="@dimen/image_view_rectangle_top_margin_top"
                    android:contentDescription="@string/grey_line"
                    android:src="@drawable/rectangle_grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewPushNotifications" />

                <TextView
                    android:id="@+id/textViewYourFriends"
                    style="@style/TextViewYourFriends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_view_profile_edit_margin_start"
                    android:layout_marginTop="@dimen/text_view_your_friends_margin_top"
                    android:text="@string/your_friends"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageViewRectangleTop"
                    tools:text="Ваши друзья" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewFriends"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/recycler_friends_layout_height"
                    android:layout_marginTop="@dimen/recycler_view_friend_margin_top"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewYourFriends" />

                <ImageView
                    android:id="@+id/imageViewRectangleBottom"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/grey_line_height"
                    android:layout_marginTop="@dimen/image_view_rectangle_bottom_margin_top"
                    android:contentDescription="@string/grey_line"
                    android:src="@drawable/rectangle_grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recyclerViewFriends" />

                <Button
                    android:id="@+id/buttonExitAccount"
                    style="@style/ButtonExitAccountProfileEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_exit_account_margin_bottom"
                    android:layout_marginTop="@dimen/button_exit_account_margin_top"
                    android:text="@string/exit_account"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageViewRectangleBottom" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/error_default_padding_offset">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_network" />

        <Button
            android:id="@+id/buttonRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_retry_margin_top"
            android:text="@string/error_button_retry" />

    </LinearLayout>

</ViewFlipper>
